--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Polyfill</title>
-    <link rel="stylesheet" href="css/demo.css"/>
+    <link rel="stylesheet" href="styles/demo.css"/>
 </head>
 <body>
 
-<div class="skycom-container">
+<div class="demo-container">
 <h1>Polyfill
-    <small  class="demo-version text--secondary">v0.2.0
+    <small  class="demo-version text--secondary">v0.2.1
         <a href="https://github.com/skyglobal/polyfill" class="text--secondary">
             <span class="demo-icon demo-icon--github"  aria-hidden=true></span>
             <span class="speak">Github Repo</span>
@@ -18,7 +18,7 @@
 </h1>
 
 </div>
-<div class="skycom-container">
+<div class="demo-container">
 
     <h2>Function</h2>
     <dl>
@@ -67,6 +67,6 @@
 
 </div>
 
-<script src="js/polyfill.js"></script>
+<script src="scripts/polyfill.js"></script>
 </body>
 </html>
